docs/pages/versions/v57.0.0/sdk/ui/swift-ui/picker.mdx
---
title: Picker
description: A SwiftUI Picker component for selecting options from a list.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Picker`](../universal/picker) — it renders the appropriate native component per platform.

Expo UI Picker matches the official SwiftUI [Picker API](https://developer.apple.com/documentation/swiftui/picker) and supports all picker styles via the [`pickerStyle`](modifiers/#pickerstylestyle) modifier.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/picker/ios-light.webp"
  darkSrc="/static/images/expo-ui/picker/ios-dark.webp"
  alt="Menu-style Picker showing fruit options with the current selection checked"
/>

## Installation

<APIInstallSection />

## Segmented picker

<ComponentExample
  title="SegmentedPickerExample.tsx"
  src="/static/images/expo-ui/examples/picker-segmented-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/picker-segmented-ios-dark.webp"
  alt="A segmented control with Apple selected, next to Banana and Orange">

```tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function SegmentedPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  // `matchContents` sizes the host to the picker instead of filling the space.
  // Segmented and wheel pickers stretch to the width they are given, so they
  // collapse under `matchContents`.
  return (
    <Host style={{ flex: 1 }}>
      <Picker
        modifiers={[pickerStyle('segmented')]}
        label="Select a fruit"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

</ComponentExample>

## Menu picker

<ComponentExample
  title="MenuPickerExample.tsx"
  src="/static/images/expo-ui/examples/picker-menu-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/picker-menu-ios-dark.webp"
  alt="An open menu picker listing Apple with a checkmark, Banana, and Orange">

```tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function MenuPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  return (
    <Host style={{ flex: 1 }}>
      <Picker
        modifiers={[pickerStyle('menu')]}
        label="Select a fruit"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

</ComponentExample>

## Wheel picker

> **Warning** The wheel variant is not available on Apple TV.

<ComponentExample
  title="WheelPickerExample.tsx"
  src="/static/images/expo-ui/examples/picker-wheel-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/picker-wheel-ios-dark.webp"
  alt="A wheel picker with Apple selected in the center band above Banana and Orange">

```tsx
import { useState } from 'react';
import { Host, Picker, Text } from '@expo/ui/swift-ui';
import { pickerStyle, tag } from '@expo/ui/swift-ui/modifiers';

const options = ['Apple', 'Banana', 'Orange'];

export default function WheelPickerExample() {
  const [selectedTag, setSelectedTag] = useState(options[0]);

  return (
    <Host style={{ flex: 1 }}>
      <Picker
        modifiers={[pickerStyle('wheel')]}
        label="Select a fruit"
        selection={selectedTag}
        onSelectionChange={selection => {
          setSelectedTag(selection);
        }}>
        {options.map(option => (
          <Text key={option} modifiers={[tag(option)]}>
            {option}
          </Text>
        ))}
      </Picker>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Picker } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/picker" apiName="Picker" />
